<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registo">


    <TextView
        android:layout_marginTop="10dp"
        style="@style/textologin"
        android:id="@+id/texto11"
        android:fontFamily="@font/galada"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registo_de_utilizador"/>

    <ImageView
        android:id="@+id/imagem5"
        android:layout_width="225dp"
        android:layout_height="226dp"
        android:layout_below="@+id/texto11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/registo" />

    <TextView
        style="@style/textoNormal"
        android:id="@+id/textView_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagem5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:text="@string/username"
        android:textSize="@dimen/SP03"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/insertUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_02"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:layout_marginEnd="@dimen/DP03"
        android:layout_marginRight="@dimen/DP03"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_03"
        style="@style/textoNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/insertUser"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:text="@string/password"
        android:textSize="@dimen/SP03"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/insertPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_03"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:layout_marginEnd="@dimen/DP03"
        android:layout_marginRight="@dimen/DP03" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="@dimen/DP01"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:background="@drawable/button_login"
        android:text="@string/botao_registar"
        android:textSize="@dimen/SP03"
        android:textAllCaps="false" />

</RelativeLayout>