<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/texto1"
        style="@style/textologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/galada"
        android:text="@string/login"
        android:textColor="@color/colorPrimary" />

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/imagem1"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_below="@id/texto1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:background="@drawable/login" />

    <TextView
        style="@style/textoNormal"
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imagem1"
        android:text="@string/login2"/>

    <TextView
        android:id="@+id/textView_02"
        style="@style/textoNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto2"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/SP03" />

    <EditText
        android:id="@+id/insertUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_02"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:layout_marginEnd="@dimen/DP03"
        android:layout_marginRight="@dimen/DP03" />

    <TextView
        style="@style/textoNormal"
        android:id="@+id/textView_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/insertUser"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:text="@string/password"
        android:textSize="@dimen/SP03"
        android:textColor="@color/colorBlack" />

    <EditText

        android:id="@+id/insertPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_03"
        android:layout_marginStart="@dimen/DP03"
        android:layout_marginLeft="@dimen/DP03"
        android:layout_marginEnd="@dimen/DP03"
        android:layout_marginRight="@dimen/DP03"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn"
        android:layout_width="@dimen/DP01"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:background="@drawable/button_login"/>



   <!-- <TextView
        style="@style/textoNormal"
        android:id="@+id/textView_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn"
        android:layout_centerHorizontal="true"
        android:text="@string/registo"
        android:layout_marginTop="30dp"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:clickable="true"
        android:onClick="textView_05"/>
-->

</RelativeLayout>